--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,17 @@
   box-sizing: border-box;
 }
 body {
+  font-family: 'Josefin Sans', 'sans-serif';
   font-family: 'Roboto', 'sans-serif';
 }
 .navbar {
+  width: 100%;
   height: 100px;
   padding: 30px 20px 0 20px;
+  top: 0;
+  left: 0;
+  position: fixed;
+  background-color: #ffffff;
   border-bottom: 2px solid lightgrey;
 }
 .nav-top {
@@ -17,6 +23,7 @@ body {
 .nav-top span {
   font-size: 22px;
   margin-left: 10px;
+  color: #8A8D91;
 }
 .nav-bottom {
   display: flex;
@@ -26,12 +33,18 @@ body {
 }
 .nav-bottom ul li {
   display: inline-block;
+  margin-right: 40px;
+  margin-bottom: 5px;
 }
-.wrapper_80 {
-  width: 80%;
-  margin: auto;
-  padding-top: 120px;
+.wrapper_65 {
+  width: 65%;
+  margin: 220px auto 0 auto;
+}
+h2 {
+  margin-bottom: 20px;
+  font-family: 'Josefin Sans', 'sans-serif';
+  color: #3C4043;
 }
 p {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
